--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -5,4 +5,14 @@
     android:id="@+id/upcomingFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mobileapplicationdevelopment.themoviedb.View.Fragments.UpComingFragment"/>
+    tools:context="com.mobileapplicationdevelopment.themoviedb.View.Fragments.UpComingFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_fragment_up_coming"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
