--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/lato</item>
         <item>@font/lato_bold</item>
+        <item>@font/montserrat</item>
+        <item>@font/montserrat_bold</item>
     </array>
 </resources>
