--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -2,23 +2,269 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraint_movie_details_fragment"
+    android:id="@+id/cl_fragment_movie_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:elevation="8dp"
+    android:outlineProvider="paddedBounds"
     tools:context=".View.Fragments.MovieDetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tv_movie_id_movie_details_fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/lato_bold"
-        android:text="@string/tie_movieid_main"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_first_fragment_movie_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_backdrop_fragment_movie_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="256dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:background="@drawable/gradient_image_view"
+                    android:foreground="@drawable/gradient_image_view"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:shapeAppearanceOverlay="@style/cornerBackdropImageView" />
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_poster_fragment_movie_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="192dp"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop_fragment_movie_details"
+                    app:layout_constraintStart_toStartOf="@+id/iv_backdrop_fragment_movie_details"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_fragment_movie_details"
+                    app:shapeAppearanceOverlay="@style/cornerPosterImageView"
+                    tools:ignore="ImageContrastCheck" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_title_fragment_movie_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="32dp"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:justificationMode="none"
+                    android:text="@string/tv_title_fragment_movie_details"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop_fragment_movie_details"
+                    app:layout_constraintEnd_toEndOf="@+id/iv_backdrop_fragment_movie_details"
+                    app:layout_constraintStart_toEndOf="@+id/iv_poster_fragment_movie_details"
+                    app:layout_constraintTop_toTopOf="@+id/iv_poster_fragment_movie_details" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_tagline_fragment_movie_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="16dp"
+                    android:fontFamily="@font/montserrat"
+                    android:justificationMode="inter_word"
+                    android:text="@string/tv_tagline_fragment_movie_details"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop_fragment_movie_details"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_title_fragment_movie_details"
+                    app:layout_constraintStart_toStartOf="@+id/tv_title_fragment_movie_details"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_title_fragment_movie_details" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_year_fragment_movie_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:elevation="8sp"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:singleLine="true"
+                    android:text="@string/tv_year_fragment_movie_details"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_genre_fragment_movie_details"
+                    app:layout_constraintStart_toEndOf="@+id/iv_poster_fragment_movie_details"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_fragment_movie_details" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_runtime_fragment_movie_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:justificationMode="inter_word"
+                    android:singleLine="true"
+                    android:text="@string/tv_runtime_fragment_movie_details"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_year_fragment_movie_details"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_tagline_fragment_movie_details"
+                    app:layout_constraintStart_toEndOf="@+id/tv_year_fragment_movie_details"
+                    app:layout_constraintTop_toTopOf="@+id/tv_year_fragment_movie_details" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_genre_fragment_movie_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/montserrat"
+                    android:justificationMode="none"
+                    android:text="@string/tv_genre_fragment_movie_details"
+                    android:textAlignment="textStart"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_poster_fragment_movie_details"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_tagline_fragment_movie_details"
+                    app:layout_constraintStart_toStartOf="@+id/tv_tagline_fragment_movie_details"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_fragment_movie_details" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <View
+                android:id="@+id/divider_first"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/cl_second_fragment_movie_details"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cl_first_fragment_movie_details"
+                tools:layout_editor_absoluteX="32dp" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_second_fragment_movie_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_synopsis_fragment_movie_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:paddingHorizontal="16dp"
+                    android:text="@string/tv_synopsis_fragment_movie_details"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_overview_fragment_movie_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/background_text_view"
+                    android:fontFamily="@font/montserrat"
+                    android:justificationMode="inter_word"
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="8sp"
+                    android:padding="16dp"
+                    android:text="@string/tv_synopsis_fragment_movie_details"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_synopsis_fragment_movie_details"
+                    app:layout_constraintStart_toStartOf="@+id/tv_synopsis_fragment_movie_details"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_fragment_movie_details" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <View
+                android:id="@+id/divider_second"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/cl_second_fragment_movie_details"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cl_first_fragment_movie_details"
+                tools:layout_editor_absoluteX="32dp" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_third_fragment_movie_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_production_companies_fragment_movie_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:paddingHorizontal="16dp"
+                    android:text="@string/tv_production_companies_fragment_movie_details"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <HorizontalScrollView
+                    android:id="@+id/hsv_fragment_movie_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_production_companies_fragment_movie_details"
+                    app:layout_constraintStart_toStartOf="@+id/tv_production_companies_fragment_movie_details"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_production_companies_fragment_movie_details"
+                    tools:ignore="SpeakableTextPresentCheck">
+
+                    <LinearLayout
+                        android:id="@+id/ll_production_companies_logo_fragment_movie_details"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal" />
+                </HorizontalScrollView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <View
+                android:id="@+id/divider_third"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/cl_second_fragment_movie_details"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cl_first_fragment_movie_details"
+                tools:layout_editor_absoluteX="32dp" />
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
