--- a/app/src/main/res/navigation/menu_navigation.xml
+++ b/app/src/main/res/navigation/menu_navigation.xml
@@ -18,7 +18,11 @@
         android:id="@+id/upcomingFragment"
         android:name="com.mobileapplicationdevelopment.themoviedb.View.Fragments.UpComingFragment"
         android:label="Upcoming"
-        tools:layout="@layout/fragment_upcoming" />
+        tools:layout="@layout/fragment_upcoming" >
+        <action
+            android:id="@+id/action_upcomingFragment_to_movieDetailsFragment"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/movieDetailsFragment"
         android:name="com.mobileapplicationdevelopment.themoviedb.View.Fragments.MovieDetailsFragment"
